# Precognito

./: .dockerignore  .gitignore  Dockerfile  README.md  REMAINING_TODOS.md  USER_MANUAL.md  docker-compose.yml  main.py  pyproject.toml  simplified_results.csv  simplified_results.json  simplified_summary.json  start_all.py  test_precognito.sqlite
.github/workflows/: ci.yml
.plan/: google-style-comments.md
backend/precognito/: api.py  auth.py  logging_utils.py  notifications.py  utils.py
backend/precognito/anomaly/: __init__.py  anomaly_model.pkl  api.py  api_simple.py  batch_test_data.json  cleanup.py  config.py  core.py  debug_model.py  detector.py  feature_names.json  feature_stats.json  main.py  main_simple.py  model.py  preprocessing.py  router.py  scaler.pkl  test_batch_api.py  test_batch_curl.sh  test_debug.py  test_debug2.py  test_integration.py  test_simple.py  train_model.py  utils.py
backend/precognito/ingestion/: alerts.py  core.py  dsp.py  heartbeat.py  influx_client.py  mqtt_worker.py  preprocess.py  simulator.py
backend/precognito/inventory/: api.py  models.py
backend/precognito/predictive/: drift_detector.py  predictive_engine.py
backend/precognito/predictive/api/: main.py
backend/precognito/predictive/backend/: engine.py  main.py  schemas.py
backend/precognito/predictive/ml/: data_generator.py  inference_engine.py  train.py
backend/precognito/work_orders/: api.py  assets.py  audit.py  database.py  models.py  schemas.py  utils.py
docs/: ADMIN_GUIDE.md  API_REFERENCE.md
frontend/: next.config.ts  package.json  playwright.config.ts  seed-user.ts  tsconfig.json
frontend/playwright-report/: index.html
frontend/public/: manifest.json
frontend/scripts/: seed-user-api.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: ThemeContext.tsx  api.test.ts  api.ts  auth-client.ts  auth.ts  constants.ts  mockData.ts  reporting.ts  types.ts
frontend/src/test/: setup.ts
frontend/test-results/: .last-run.json
frontend/test-results/dashboard-Dashboard-Functi-32a22-me-message-and-status-cards-chromium/: error-context.md
frontend/test-results/reports-Reports-and-Analyt-783dd-ng-page-with-export-options-chromium/: error-context.md
frontend/test-results/reports-Reports-and-Analytics-should-display-analytics-page-chromium/: error-context.md
frontend/tests/e2e/: auth.spec.ts
tests/integration/: test_api_flows_integration.py  test_drift_detection_integration.py  test_financial_integration.py  test_inventory_integration.py  test_main_api_integration.py  test_work_orders_integration.py
tests/security/: test_vulnerabilities.py
tests/unit/: test_anomaly_fixed_api.py  test_anomaly_ml_predictions.py  test_anomaly_simplified.py  test_ingestion_service.py  test_predictive_inference.py
(+55 files in other folders)
